--- a/LCS/Cafeteria.html
+++ b/LCS/Cafeteria.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <title>Guía de Excursionismo - Universidad Autónoma de Chiapas</title>
-
+    <style>
+        /* Estilos para centrar la imagen horizontalmente */
+        img {
+            display: block; /* Para que los márgenes automáticos funcionen correctamente */
+            margin: 0 auto; /* Centra horizontalmente la imagen */
+        }
+    </style>
 </head>
 <body>
 
@@ -20,11 +26,13 @@
     <a href="../contacto.html">Contacto</a>
 </nav>
 
-<img src="../Img/LSC/IMG-20240424-WA0022.jpg" alt="" width=" 500px">
-<h2>a lado del Edifico A se encuentra la cafeteria del clocal, en la cual alumnos y maestro compran sus desayunos, comidas y aguas frescas</h2>
+<img src="../Img/LSC/IMG-20240424-WA0022.jpg" alt="" width="400px">
+<h2>a lado del Edifico A se encuentra la cafetería del área, en la cual los alumnos compran sus desayunos, comidas y aperitivos y de paso a lado se encuentra el área de control escolar donde se registra todo el papeleo de los estudiantes.</h2>
 
-<footer><p>© 2024 Universidad Autónoma de Chiapas</p></footer>
-
+<footer>
+    <p>© 2024 Universidad Autónoma de Chiapas</p>
+    <a href="../LCS/LSC.html">Volver a la página principal de LCS</a>
+</footer>
 
 </body>
 </html>
