--- a/LCS/LSC.html
+++ b/LCS/LSC.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <style>
+        /* Estilos para los enlaces */
+        nav ul li a, .links p a {
+            display: inline-block;
+            padding: 8px 12px;
+            margin: 5px;
+            text-decoration: none;
+            color: #333;
+            border: 1px solid #ccc; /* Agrega un borde de 1px sólido con color gris claro */
+            border-radius: 5px; /* Añade bordes redondeados */
+        }
+
+        nav ul li a:hover, .links p a:hover {
+            background-color: #f0f0f0; /* Cambia el color de fondo al pasar el cursor sobre el enlace */
+        }
+    </style>
     <title>Guía de Excursionismo - Universidad Autónoma de Chiapas</title>
 
 </head>
@@ -20,11 +36,13 @@
     <a href="../contacto.html">Contacto</a>
 </nav>
 
-<p><a href="" id="Lab">Laboratorio</a></p>
-<p><a href="EdificioA.html">Edificio A</a></p>
-<p><a href="EdificioB.html">Edificio B</a></p>
-<p><a href="">Biblioteca</a></p>
-<p><a href="Cafeteria.html">Cafeteria</a></p>
+<section class="links">
+    <p><a href="Laboratorio.html">Laboratorio</a></p>
+    <p><a href="EdificioA.html">Edificio A</a></p>
+    <p><a href="EdificioB.html">Edificio B</a></p>
+    <p><a href="biblioteca.html">Biblioteca</a></p>
+    <p><a href="Cafeteria.html">Cafetería</a></p>
+</section>
 
 <footer>
 
