--- a/Lugares.html
+++ b/Lugares.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Guía de Excursionismo - Universidad Autónoma de Chiapas</title>
+    <style>
+        /* Estilos para los enlaces */
+        nav ul li a, .links p a {
+            display: inline-block;
+            padding: 8px 12px;
+            margin: 5px;
+            text-decoration: none;
+            color: #333;
+            border: 1px solid #ccc; /* Agrega un borde de 1px sólido con color gris claro */
+            border-radius: 5px; /* Añade bordes redondeados */
+        }
+
+        nav ul li a:hover, .links p a:hover {
+            background-color: #f0f0f0; /* Cambia el color de fondo al pasar el cursor sobre el enlace */
+        }
+    </style>
 
 </head>
 <body>
@@ -20,7 +36,9 @@
     <a href="contacto.html">Contacto</a>
 </nav>
 
-<a href="LCS/LSC.html">LSC y LIDTS</a>
+<section class="links">
+    <p><a href="LCS/LSC.html">LSC y LIDTS</a></p>
+</section>
 
 <footer>
     <p>© 2024 Universidad Autónoma de Chiapas</p>
