--- a/LCS/biblioteca.html
+++ b/LCS/biblioteca.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>Guía de Excursionismo - Universidad Autónoma de Chiapas</title>
+    <style>
+        /* Estilos para el contenedor de las imágenes */
+        #slider {
+            width: 500px;
+            overflow: hidden;
+            margin: 0 auto;
+            position: relative; /* Se añade posición relativa para alinear los botones */
+        }
 
+        /* Estilos para las imágenes */
+        #slider img {
+            width: 100%;
+            display: block;
+        }
+
+        /* Estilos para los botones de desplazamiento */
+        .prev, .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            z-index: 1; /* Asegura que los botones estén encima de las imágenes */
+        }
+
+        .prev {
+            left: 0;
+        }
+
+        .next {
+            right: 0;
+        }
+    </style>
+    <title>Guía de Excursionismo - Universidad Autónoma de Chiapas</title>
 </head>
 <body>
 
@@ -20,11 +54,47 @@
     <a href="../contacto.html">Contacto</a>
 </nav>
 
-<img src="../Img/LSC/IMG" alt="" width=" 500px">
-<h2>en este lugar es la Biblioteca donde podemos buscar y prestar libro a la Universidad</h2>
+<div id="slider">
+    <img src="../Img/LSC/biblioteca.jpg" alt="Imagen 1">
+    <img src="../Img/LSC/biblioteca_2.jpg" alt="Imagen 2">
+    <img src="../Img/LSC/biblioteca_3.jpg" alt="Imagen 3">
+    <img src="../Img/LSC/Captura de pantalla (243).png" alt="Imagen 4">
+</div>
+<!-- Botones de navegación -->
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+<p>Este espacio alberga la Biblioteca Universitaria, dentro del campus. Aquí, los estudiantes y profesores pueden sumergirse en un vasto océano de conocimiento, 
+    explorando las páginas de innumerables libros que abarcan desde la literatura clásica. Este lugar invita a la mente inquisitiva a navegar entre sus pasillos, descubriendo tesoros literarios que amplían horizontes y encienden la imaginación.
+    Ya sea para realizar investigaciones académicas, sumergirse en una novela cautivadora o simplemente encontrar un rincón tranquilo para estudiar, la Biblioteca Universitaria ofrece un refugio acogedor para aquellos que buscan enriquecer sus mentes y expandir su comprensión del mundo que les rodea.</p>
 
-<footer><p>© 2024 Universidad Autónoma de Chiapas</p></footer>
 
+
+
+     <footer>
+        <p>© 2024 Universidad Autónoma de Chiapas</p>
+        <a href="../LCS/LSC.html">Volver a la página principal de LCS</a>
+    </footer>
+
+<script>
+    // Script para el deslizamiento de imágenes
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+        showSlides(slideIndex += n);
+    }
+
+    function showSlides(n) {
+        var i;
+        var slides = document.querySelectorAll('#slider img');
+        if (n > slides.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = slides.length}
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        slides[slideIndex-1].style.display = "block";
+    }
+</script>
 
 </body>
 </html>
